--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  background: #000; }
+
 .navbar {
   background-color: none !important; }
   .navbar .wrapper {
@@ -7,7 +10,7 @@
       text-indent: -10000px;
       background-image: url(../photos/IB-ALLI.png);
       width: 100px;
-      height: 25px;
+      height: 30px;
       background-repeat: no-repeat;
       background-size: 100% 100%; }
     .navbar .wrapper .collapse {
@@ -141,7 +144,12 @@
       width: 100%; }
       .navbar .wrapper .navbar-toggler {
         float: right;
-        border: 2px solid #ffffff; }
+        padding: .25rem .75rem;
+        font-size: 1.25rem;
+        line-height: 1;
+        background-color: rgba(200, 200, 200, 0.5) !important;
+        border: 1px solid transparent;
+        border-radius: .25rem; }
       .navbar .wrapper .collapse {
         float: none; }
 
