--- a/css/style.scss
+++ b/css/style.scss
@@ -241,14 +241,12 @@ body{
 
             .navbar-toggler{
                 float: right;
-                // border: 2px solid $white;
+
                     //  default reconfiguration   
                 padding: .25rem .75rem;
                 font-size: 1.25rem;
                 line-height: 1;
                 background-color: rgba(200,200,200,0.5) !important;
-                border: 1px solid transparent;
-                border-radius: .25rem;
             }
             .collapse{
                 float: none;
@@ -256,8 +254,7 @@ body{
         }
     }
 
-    navbar-toggler {
-    }
+    
 
     .hero{
         background-size: cover;
@@ -282,4 +279,23 @@ body{
             }
         }
     }
+}
+
+
+@media only screen and (max-width: 425px){
+
+    .navbar{
+        background-color: none !important;
+    
+        .wrapper{
+            .navbar-toggler{
+                    //  default reconfiguration   
+                padding: .15rem .25rem;
+                font-size: 1.25rem;
+                line-height: 1;
+            }
+        }
+    }
+
+    
 }
