--- a/css/style.css
+++ b/css/style.css
@@ -147,9 +147,7 @@ body {
         padding: .25rem .75rem;
         font-size: 1.25rem;
         line-height: 1;
-        background-color: rgba(200, 200, 200, 0.5) !important;
-        border: 1px solid transparent;
-        border-radius: .25rem; }
+        background-color: rgba(200, 200, 200, 0.5) !important; }
       .navbar .wrapper .collapse {
         float: none; }
 
@@ -168,5 +166,12 @@ body {
       margin-top: 40px;
       padding: 12px 20px;
       width: 100%; } }
+@media only screen and (max-width: 425px) {
+  .navbar {
+    background-color: none !important; }
+    .navbar .wrapper .navbar-toggler {
+      padding: .15rem .25rem;
+      font-size: 1.25rem;
+      line-height: 1; } }
 
 /*# sourceMappingURL=style.css.map */
