--- a/css/style.scss
+++ b/css/style.scss
@@ -87,7 +87,7 @@ body{
     .action-button{
 
         a{
-            margin-top: 40px;
+            margin-top: 1em;
             border-radius: 0px;
             padding: 12px 20px;
             width: 50%;
@@ -158,7 +158,7 @@ body{
     .about-wrapper{
         width: 80%;
         margin: 0 auto;
-        margin-top: 4rem;
+        margin-top: 2em;
         line-height: 40px;
 
         ul{
@@ -238,9 +238,6 @@ body{
     }
 }
 
-.content {
-    margin-top: 1.5em !important;
-}
 @media only screen and (max-width: 768px){
 
     .navbar{
@@ -283,7 +280,7 @@ body{
         .action-button{
                 
             a{
-                margin-top: 40px;
+                margin-top: 1em;
                 padding: 12px 20px;
                 width: 100%;
             }
