--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,11 @@ body {
       .other-info-container footer ul .fbk {
         margin-left: 0; }
 
+@media only screen and (max-width: 11024px) {
+  .hero .action-button a {
+    margin-top: 1em;
+    padding: 12px 20px;
+    width: 100%; } }
 @media only screen and (max-width: 768px) {
   .navbar {
     background-color: none !important; }
