--- a/css/style.scss
+++ b/css/style.scss
@@ -238,6 +238,14 @@ body{
     }
 }
 
+
+@media only screen and (max-width: 11024px){
+    .hero .action-button a {
+        margin-top: 1em;
+        padding: 12px 20px;
+        width: 100%;
+    }
+}
 @media only screen and (max-width: 768px){
 
     .navbar{
